# django-bandits

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: django-bandit-package.yml
bandit_middleware/: admin.py  middleware.py  models.py
django_bandits/: admin.py  apps.py  forms.py  middleware.py  models.py
django_bandits/migrations/: 0001_initial.py  0001_squashed_0004_remove_epsilondecaymodel_beta.py  0002_ucb1model_min_views_ucb1model_significance_level_and_more.py  0003_epsilondecaymodel_min_views_and_more.py  0004_remove_epsilondecaymodel_beta.py  0005_banditflag_ignore_for_authenticated_users.py
tests/: test_middleware.py  test_settings.py  test_urls.py
tests/models/: test_epsilon_decay.py  test_epsilon_greedy.py  test_ucb1.py
